start page styles

--- a/popup.html
+++ b/popup.html
@@ -7,8 +7,25 @@
     <script src="popup.js"></script>
   </head>
   <body>
-   
-   <h1>Hello world</h1>
+
+	<div id="content">
+
+	<header><h1 id="logo">TumblrTime</h1></header>
+
+	<!--initial page for users to "start the game"-->   
+	<div id="start">
+	<img id="avatar" src="http://25.media.tumblr.com/avatar_47836f340d2b_64.png"/>
+	<button id="start-tracking">start your adventure!
+	</button>
+	</div><!--start-->
+
+	<!--dashboard for showing avatar, level, stats leaderboard, and export button-->
+	<div id="stats">
+	<button id="export-data">Export!
+	</button>
+	<div><!--stats-->
+
+	</div><!--tumblrtime-->
 
   </body>
 </html>
