stats page styles

--- a/popup.html
+++ b/popup.html
@@ -15,14 +15,26 @@
 	<!--initial page for users to "start the game"-->   
 	<div id="start">
 	<img id="avatar" src="http://25.media.tumblr.com/avatar_47836f340d2b_64.png"/>
-	<button id="start-tracking">start your adventure!
-	</button>
+	<button id="start-tracking">start your adventure!</button>
 	</div><!--start-->
 
 	<!--dashboard for showing avatar, level, stats leaderboard, and export button-->
 	<div id="stats">
-	<button id="export-data">Export!
-	</button>
+	
+		<div id="user-rank">
+			<img id="avatar" src="http://25.media.tumblr.com/avatar_47836f340d2b_64.png"/>
+			<h3 id="username">TonyXie</h3>
+			<p id="level">Level 5</p>
+			<p id="title">Cat-Lover</p>
+			<button id="export-data">export!</button>
+		</div><!--user-rank-->
+
+		<div id="user-stats">
+			<h2>Stats</h2>
+			<ol id="superlatives">
+			</ol><!--superlatives-->
+		</div><!--user-stats-->
+
 	<div><!--stats-->
 
 	</div><!--tumblrtime-->
