--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style/custom.css">
     <script src = "jquery-1.9.1.min.js"></script>
     <script src="popup.js"></script>
+	<script src = "localstorage.js"></script>
   </head>
   <body>
 
