--- a/popup.html
+++ b/popup.html
@@ -5,16 +5,24 @@
     <link rel="stylesheet" href="style/custom.css">
     <script src = "jquery-1.9.1.min.js"></script>
     <script src="popup.js"></script>
+
+	<link href='http://fonts.googleapis.com/css?family=Quintessential' rel='stylesheet' type='text/css'>
+
+
   </head>
   <body>
 
 	<div id="content">
 
-	<header><h1 id="logo">TumblrTime</h1></header>
+	<header>
+	<h1 id="logo">Tumblrtime</h1>
+	<img id="logo-img"src="images/icon48.png"/>
+	</header>
 
 	<!--initial page for users to "start the game"-->   
 	<div id="start">
-	<img id="avatar" src="http://25.media.tumblr.com/avatar_47836f340d2b_64.png"/>
+	<img class="avatar" src="http://25.media.tumblr.com/avatar_47836f340d2b_64.png"/>
+	<h3 class="username">TonyXie</h3>
 	<button id="start-tracking">start your adventure!</button>
 	</div><!--start-->
 
@@ -22,20 +30,28 @@
 	<div id="stats">
 	
 		<div id="user-rank">
-			<img id="avatar" src="http://25.media.tumblr.com/avatar_47836f340d2b_64.png"/>
-			<h3 id="username">TonyXie</h3>
-			<p id="level">Level 5</p>
-			<p id="title">Cat-Lover</p>
-			<button id="export-data">export!</button>
+			<img class="avatar" src="http://25.media.tumblr.com/avatar_47836f340d2b_64.png"/>
+			<h3 class="username">TonyXie</h3>
+			<span id="level"><img src="images/star.png" width="20"/><p>Level 5</p></span>
+			<span id="title"><img src="images/heart.png" width="20"/><p>Cat-Lover</p></span>
 		</div><!--user-rank-->
 
 		<div id="user-stats">
 			<h2>Stats</h2>
-			<ol id="superlatives">
-			</ol><!--superlatives-->
+			<ul id="superlatives">
+				<li><img src="images/check.png" width="20">Cattiness</li>
+				<li><img src="images/check.png" width="20">Foodiness</li>
+				<li><img src="images/check.png" width="20">Intellectual</li>
+				<li><img src="images/check.png" width="20">Hipsterness</li>
+				<button id="export-data">export!</button>
+			</ul><!--superlatives-->
 		</div><!--user-stats-->
 
-	<div><!--stats-->
+	</div><!--stats-->
+
+	<div id="exported">
+		<h3>Your story was successfully posted to Tumblr :)</h3>
+	</div><!--exported-->
 
 	</div><!--tumblrtime-->
 
