got likes, reblogs, images

--- a/popup.html
+++ b/popup.html
@@ -45,10 +45,10 @@
 		<div id="user-stats">
 			<h2>Stats</h2>
 			<ul id="superlatives">
-				<li><img src="images/check.png" width="20">Cattiness</li>
-				<li><img src="images/check.png" width="20">Foodiness</li>
-				<li><img src="images/check.png" width="20">Intellectual</li>
-				<li><img src="images/check.png" width="20">Hipsterness</li>
+				<li id = "cattiness">Cattiness</li>
+				<li id = "foodiness">Foodiness</li>
+				<li id = "intellectual">Intellectual</li>
+				<li id = "hipsterness">Hipsterness</li>
 				<button id="export-data">export!</button>
 			</ul><!--superlatives-->
 		</div><!--user-stats-->
